# sql_alchemy_sample

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
src/: db.py  main.py
src/databases/: alembic.ini
src/databases/migration/versions/: e5d56bc071e3_create_items_table.py
src/models/: item.py
src/routers/: item.py
src/schemas/: item.py
